// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toContainValues fails when given object contains all values including arrays 1`] = `
"expect(received).not.toContainValues(expected)

Expected object to not contain all values:
  [\\"duck\\", [{\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}]]
Received:
  {\\"donald\\": \\"duck\\", \\"message\\": [{\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}]}"
`;

exports[`.not.toContainValues fails when given object contains all values including objects 1`] = `
"expect(received).not.toContainValues(expected)

Expected object to not contain all values:
  [{\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}, \\"duck\\"]
Received:
  {\\"donald\\": \\"duck\\", \\"message\\": {\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}}"
`;

exports[`.not.toContainValues fails when given object contains primitive values 1`] = `
"expect(received).not.toContainValues(expected)

Expected object to not contain all values:
  [\\"world\\", false]
Received:
  {\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}"
`;

exports[`.toContainValues fails when given object does not contain all primitive values 1`] = `
"expect(received).toContainValues(expected)

Expected object to contain all values:
  [\\"hello\\", 0, false]
Received:
  {\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}"
`;

exports[`.toContainValues fails when given object does not contain all values including arrays 1`] = `
"expect(received).toContainValues(expected)

Expected object to contain all values:
  [\\"duck\\", [{\\"hello\\": \\"world\\"}]]
Received:
  {\\"donald\\": \\"duck\\", \\"message\\": [{\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}]}"
`;

exports[`.toContainValues fails when given object does not contain all values including objects 1`] = `
"expect(received).toContainValues(expected)

Expected object to contain all values:
  [{\\"hello\\": \\"world\\"}]
Received:
  {\\"donald\\": \\"duck\\", \\"message\\": {\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}}"
`;
